@@ -6,6 +6,8 @@
         - Added test for component instances getting $self->{value} from config.
         - Add Catalyst::Response->print() method (ilmari)
         - Optionally aggregate tests using Test::Aggregate (Florian Ragwitz).
+        - Additional docs for uri_for to mention how to use $c->action and 
+          $c->req->captures (jhannah)
 
 5.7XXXXXX XXXX
         - Fix some Win32 test failures
